--- a/090.Image On Error Placeholder CSS Only/style.css
+++ b/090.Image On Error Placeholder CSS Only/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -23,4 +22,46 @@ body {
 
   font-family: 'Inter', sans-serif;
   color: #fbfbfa;
+}
+
+img {
+  display: block;
+  margin-block: 1em;
+  width: 100%;
+  height: 300px;
+
+  object-fit: cover;
+  position: relative;
+
+  border-radius: 30px;
+
+  &::before {
+    color: transparent;
+  }
+  &::after {
+    content: "Fail to load the \A" attr(alt) " image";
+    position: absolute;
+    inset: 0;
+    display: grid;
+    place-items: center;
+    text-align: center;
+    background: transparent;
+    border: 2px dashed currentColor;
+    font: bold 1.6em/1.5 system-ui;
+    white-space: pre-wrap;
+    color: hsla(0, 39%, 49%, 0.894);
+  }
+}
+
+main {
+  max-width: 900px;
+  margin-inline: 1rem;
+  padding: 15px;
+  text-align: justify;
+}
+
+p {
+  margin-block: 1em;
+  font-size: 1.2em;
+  line-height: 1.5;
 }
