--- a/091.Image Comparison Slider/style.css
+++ b/091.Image Comparison Slider/style.css
@@ -30,27 +30,21 @@ img {
   display: inline-block;
   max-width: 100%;
   object-fit: cover;
+  object-position: 1500px;
 }
 
-main {
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
-}
-
-.container {
+.slider-container {
+  --indicator: 50%;
   display: grid;
   place-content: center;
   position: relative;
   overflow: hidden;
   border-radius: 1rem;
-  --position: 50%;
 }
 
 .image-container {
-  max-width: 800px;
-  max-height: 90vh;
-  aspect-ratio: 1/1;
+  max-width: 600px;
+  max-height: 60vh;
 }
 
 .slider-image {
@@ -63,16 +57,15 @@ main {
 .image-before {
   position: absolute;
   inset: 0;
-  width: var(--position);
+  width: var(--indicator);
   filter: grayscale(100%)
 }
 
 .slider {
   position: absolute;
   inset: 0;
-  cursor: pointer;
+  cursor: grab;
   opacity: 0;
-  /* for Firefox */
   width: 100%;
   height: 100%;
 }
@@ -87,23 +80,23 @@ main {
   inset: 0;
   width: .2rem;
   height: 100%;
-  background-color: #fff;
-  /* z-index: 10; */
-  left: var(--position);
+  background-color: hsl(0, 0%, 80%);
+  left: var(--indicator);
   transform: translateX(-50%);
   pointer-events: none;
 }
 
 .slider-button {
   position: absolute;
-  background-color: #fff;
-  color: black;
-  padding: .5rem;
-  border-radius: 100vw;
-  display: grid;
-  place-items: center;
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(300, 15%, 8%);
+  padding: 0.25rem;
+  border-radius: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   top: 50%;
-  left: var(--position);
+  left: var(--indicator);
   transform: translate(-50%, -50%);
   pointer-events: none;
   box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
