--- a/091.Image Comparison Slider/style.css
+++ b/091.Image Comparison Slider/style.css
@@ -30,7 +30,6 @@ img {
   display: inline-block;
   max-width: 100%;
   object-fit: cover;
-  object-position: 1500px;
 }
 
 .slider-container {
@@ -48,6 +47,7 @@ img {
 }
 
 .slider-image {
+
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -61,7 +61,7 @@ img {
   filter: grayscale(100%)
 }
 
-.slider {
+.slider-input {
   position: absolute;
   inset: 0;
   cursor: grab;
