--- a/091b.Vertical Image Comparison Slider/style.css
+++ b/091b.Vertical Image Comparison Slider/style.css
@@ -24,15 +24,17 @@ body {
   color: #fbfbfa;
 }
 
-
 img {
   display: inline-block;
   max-width: 100%;
+  height: 700px;
   object-fit: cover;
+  object-position: top;
 }
 
 .slider-container {
   --indicator: 50%;
+  writing-mode: vertical-lr;
   display: grid;
   place-content: center;
   position: relative;
@@ -42,21 +44,19 @@ img {
 
 .image-container {
   max-width: 600px;
-  max-height: 60vh;
+  height: 60vh;
 }
 
 .slider-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  object-position: top;
 }
 
 .image-before {
   position: absolute;
   inset: 0;
-  height: var(--indicator);
-  filter: grayscale(100%)
+  clip-path: inset(0 0 calc(100% - var(--indicator)) 0);
+  filter: grayscale(100%);
 }
 
 .slider-input {
@@ -68,7 +68,7 @@ img {
   height: 100%;
 }
 
-.slider:focus-visible~.slider-button {
+.slider:focus-visible ~ .slider-button {
   outline: 5px solid black;
   outline-offset: 3px;
 }
@@ -88,14 +88,19 @@ img {
   position: absolute;
   background-color: hsl(0, 0%, 100%);
   color: hsl(300, 15%, 8%);
+
   padding: 0.25rem;
   border-radius: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+
+  display: grid;
+  place-items: center;
   left: 50%;
   top: var(--indicator);
-  transform: translate(-50%, -50%);
+  transform: translate(-40%, -50%);
+
   pointer-events: none;
-  box-shadow: 1px 1px 1px hsl(0, 50%, 2%, .5);
+  box-shadow: 1px 1px 1px hsl(0, 50%, 2%, 0.5);
+  svg {
+    rotate: 90deg;
+  }
 }
