--- a/091b.Vertical Image Comparison Slider/style.css
+++ b/091b.Vertical Image Comparison Slider/style.css
@@ -33,7 +33,7 @@ img {
 }
 
 .slider-container {
-  --indicator: 50%;
+  --position: 50%;
   writing-mode: vertical-lr;
   display: grid;
   place-content: center;
@@ -55,7 +55,7 @@ img {
 .image-before {
   position: absolute;
   inset: 0;
-  clip-path: inset(0 0 calc(100% - var(--indicator)) 0);
+  clip-path: inset(0 0 calc(100% - var(--position)) 0);
   filter: grayscale(100%);
 }
 
@@ -79,7 +79,7 @@ img {
   width: 100%;
   height: 0.2rem;
   background-color: hsl(0, 0%, 80%);
-  top: var(--indicator);
+  top: var(--position);
   transform: translateY(-50%);
   pointer-events: none;
 }
@@ -95,7 +95,7 @@ img {
   display: grid;
   place-items: center;
   left: 50%;
-  top: var(--indicator);
+  top: var(--position);
   transform: translate(-40%, -50%);
 
   pointer-events: none;
