--- a/093.Timeline Css Only/style.css
+++ b/093.Timeline Css Only/style.css
@@ -1,9 +1,4 @@
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 
 *,
 *:before,
@@ -11,9 +6,19 @@
   box-sizing: border-box;
 }
 
+:root {
+  --grey-100: hsl(210, 22%, 96%);
+  --grey-200: hsl(0, 0%, 89%);
+  --grey-300: hsl(0, 0%, 70%);
+  --grey-400: hsl(0, 0%, 48%);
+  --grey-500: hsl(0, 0%, 30%);
+
+  --blue-500: hsl(231, 20%, 33%);
+}
+
 body {
-  width: 100vw;
-  height: 100dvh;
+  max-width: 100vw;
+  height: 100vh;
 
   position: relative;
   background-color: #171117;
@@ -23,4 +28,201 @@ body {
 
   font-family: 'Inter', sans-serif;
   color: #fbfbfa;
+  overflow: hidden;
+}
+
+.timeline {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  font-size: 1.125rem;
+
+  img {
+    display: block;
+    max-width: 100%;
+  }
+
+  &::before {
+    content: '';
+    position: absolute;
+    transform: translateX(-50%);
+    left: 8px;
+    top: 0;
+    bottom: 0;
+    width: 2px;
+    background-color: var(--grey-300);
+    z-index: -1;
+  }
+}
+
+.timeline-item {
+  display: flex;
+  gap: 24px;
+
+  &+* {
+    margin-top: 24px;
+  }
+
+  &+.blank-item {
+    margin-top: 5em;
+  }
+
+}
+
+.timeline-item-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-left: -52px;
+  flex-shrink: 0;
+  overflow: hidden;
+  box-shadow: 0 0 0 2px hsl(0, 0%, 100%);
+
+  svg {
+    width: 1em;
+    height: 1em;
+  }
+
+  &.faded-icon {
+    background-color: var(--grey-100);
+    color: var(--grey-400);
+  }
+
+  &.filled-icon {
+    background-color: var(--blue-500);
+    color: hsl(0, 0%, 100%);
+  }
+}
+
+.timeline-item-description {
+  display: flex;
+  padding-top: 6px;
+  gap: 8px;
+  color: var(--grey-400);
+
+  img {
+    flex-shrink: 0;
+  }
+
+  a {
+    color: var(--grey-200);
+    font-weight: 500;
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+      color: var(--blue-500);
+    }
+  }
+}
+
+.avatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+  aspect-ratio: 1 / 1;
+  flex-shrink: 0;
+  width: 40px;
+  height: 40px;
+
+  &.small {
+    width: 28px;
+    height: 28px;
+  }
+
+  img {
+    object-fit: cover;
+  }
+}
+
+.commit {
+  margin-top: 12px;
+  color: var(--grey-500);
+  border: 1px solid hsl(214, 12%, 27%);
+
+  border-radius: 6px;
+  padding: 16px;
+  font-size: 1rem;
+}
+
+.button {
+  border: 0;
+  padding: 0;
+  display: inline-flex;
+  vertical-align: middle;
+  margin-right: 4px;
+  margin-top: 12px;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  height: 32px;
+  padding: 0 8px;
+  background-color: var(--grey-100);
+  flex-shrink: 0;
+  cursor: pointer;
+  border-radius: 99em;
+
+  &:hover {
+    background-color: var(--grey-200);
+  }
+
+  &.square {
+    border-radius: 50%;
+    color: var(--grey-400);
+    width: 32px;
+    height: 32px;
+    padding: 0;
+
+    svg {
+      width: 24px;
+      height: 24px;
+    }
+
+    &:hover {
+      background-color: var(--grey-200);
+      color: var(--grey-500);
+    }
+  }
+}
+
+.show-more {
+  color: var(--grey-300);
+  background-color: transparent;
+  border: 0;
+  padding: 0;
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  font-size: 1rem;
+  text-decoration: none;
+  cursor: pointer;
+
+  svg {
+    flex-shrink: 0;
+    width: 24px;
+    height: 24px;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--grey-500);
+  }
+}
+
+.avatar-list {
+  display: flex;
+  align-items: center;
+
+  &>* {
+    position: relative;
+    box-shadow: 0 0 0 2px #fff;
+    margin-right: -8px;
+  }
 }
