--- a/094.Simple Inline Svgs/style.css
+++ b/094.Simple Inline Svgs/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -23,4 +22,27 @@ body {
 
   font-family: 'Inter', sans-serif;
   color: #fbfbfa;
+}
+
+p {
+  font-size: 0.8em;
+  line-height: 1em;
+  padding: 1em;
+  text-align: center;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &::before {
+    content: '';
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'><path d='M448 256c0-106-86-192-192-192S64 150 64 256s86 192 192 192 192-86 192-192z' fill='%23f3bb1b' stroke='currentColor' stroke-miterlimit='10' stroke-width='32' /><path d='M250.26 166.05L256 288l5.73-121.95a5.74 5.74 0 00-5.79-6h0a5.74 5.74 0 00-5.68 6z' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='32' /><path d='M256 367.91a20 20 0 1120-20 20 20 0 01-20 20z' /></svg>");
+    width: 1em;
+    height: 1em;
+  }
+
+  strong {
+    font-weight: 800;
+    color: #f3bb1b;
+  }
 }
