chore(#3): rename day #3 meanful

--- a/003.Line Though The Odds or Even Text on Hover/styles.css
+++ b/003.Line Though The Odds or Even Text on Hover/styles.css
@@ -28,7 +28,7 @@ body {
   transition: color 0.25s linear;
   color: #111414;
 
-  span:nth-child(even) {
+  span:nth-child(odd) {
     position: relative;
     z-index: 2;
   }
