--- a/095.Blur Table Rows Focus/style.css
+++ b/095.Blur Table Rows Focus/style.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -24,4 +23,20 @@ body {
   font-family: 'Inter', sans-serif;
   color: #fbfbfa;
 }
+
+table {
+  width: 90%;
+  max-width: 800px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    text-align: left;
+    border: 1px solid #444;
+  }
+  td::focus-within {
+    background-color: hsla(0, 2%, 89%, 0.44);
+  }
+}
+
 
