--- a/095.Blur Table Rows Focus/style.css
+++ b/095.Blur Table Rows Focus/style.css
@@ -25,17 +25,22 @@ body {
 }
 
 table {
-  width: 90%;
-  max-width: 800px;
   border-collapse: collapse;
 
   th,
   td {
+    padding: 0.5rem 1rem;
     text-align: left;
     border: 1px solid #444;
+    width: fit-content;
   }
+
   td::focus-within {
     background-color: hsla(0, 2%, 89%, 0.44);
+  }
+
+  tr:not(:last-of-type) {
+    border-bottom: 1px solid #444;
   }
 }
 
