--- a/095.Table focus-within/style.css
+++ b/095.Table focus-within/style.css
@@ -15,7 +15,7 @@ body {
   height: 100dvh;
 
   position: relative;
-  background-color: #171117;
+  background-color: hsl(300, 15%, 8%);
 
   display: grid;
   place-content: center;
@@ -31,7 +31,7 @@ table {
   td {
     padding: 0.5rem 1rem;
     text-align: left;
-    border: 1px solid #444;
+    border: 1px solid hsl(0, 0%, 27%);
     width: fit-content;
   }
 
@@ -40,8 +40,37 @@ table {
   }
 
   tr:not(:last-of-type) {
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid hsl(0, 0%, 27%);
+  }
+
+  input {
+    font-size: inherit;
+    height: 40px;
+    font-weight: inherit;
+    border: 0;
+    padding: 0.5rem 1rem;
+    height: 100%;
+    background: hsla(0, 0%, 0%);
+    border-radius: 0;
+    caret-color: currentColor;
+    transition: color 0.26s ease-out;
+
+    &:hover:not(:focus-visible) {
+      background-color: var(--hover-background);
+    }
+
+    &::selection {
+      background: var(--accent);
+      color: white;
+    }
+
+    &:focus-visible {
+      background: light-dark(#fff, #000);
+      outline: 2px solid var(--accent);
+    }
   }
 }
 
-
+input:not(:focus, :focus-visible) {
+  cursor: pointer;
+}
