--- a/095.Table focus-within/style.css
+++ b/095.Table focus-within/style.css
@@ -10,6 +10,8 @@
   box-sizing: border-box;
 }
 
+
+
 body {
   width: 100vw;
   height: 100dvh;
@@ -24,50 +26,58 @@ body {
   color: #fbfbfa;
 }
 
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 table {
   border-collapse: collapse;
+  border-radius: 100%;
+  border: 2px dashed hsl(0, 47%, 77%);
+
+  &:focus-within tbody tr:not(:focus-within) {
+    filter: blur(1px) saturate(0.1);
+    pointer-events: none;
+    opacity: 0.8;
+  }
 
   th,
   td {
     padding: 0.5rem 1rem;
     text-align: left;
-    border: 1px solid hsl(0, 0%, 27%);
     width: fit-content;
-  }
-
-  td::focus-within {
-    background-color: hsla(0, 2%, 89%, 0.44);
+    border-radius: 10px;
   }
 
   tr:not(:last-of-type) {
-    border-bottom: 1px solid hsl(0, 0%, 27%);
+    border: 1px solid hsl(0, 0%, 27%);
+    border-left: 0;
+    border-right: 0;
   }
 
   input {
     font-size: inherit;
+    padding-block: 0.5rem;
     height: 40px;
+    /* width: 100%; */
     font-weight: inherit;
     border: 0;
-    padding: 0.5rem 1rem;
     height: 100%;
-    background: hsla(0, 0%, 0%);
+    background-color: hsl(300, 15%, 8%);
     border-radius: 0;
     caret-color: currentColor;
-    transition: color 0.26s ease-out;
-
-    &:hover:not(:focus-visible) {
-      background-color: var(--hover-background);
-    }
-
-    &::selection {
-      background: var(--accent);
-      color: white;
-    }
-
-    &:focus-visible {
-      background: light-dark(#fff, #000);
-      outline: 2px solid var(--accent);
-    }
+    text-align: left;
+    transition: color 0.26s ease;
+    color: currentColor;
+    appearance: none;
   }
 }
 
