style(#18): change style day 18 example in abbr tag

--- a/018.Tooltip (abbr)/style.css
+++ b/018.Tooltip (abbr)/style.css
@@ -19,6 +19,13 @@ main {
 }
 
 abbr {
+  font-weight: bold;
   font-style: italic;
   color: chocolate;
+  cursor: pointer;
+}
+
+p {
+  width: 300px;
+  text-align: justify;
 }
