--- a/016.Text Blurring/style.css
+++ b/016.Text Blurring/style.css
@@ -7,12 +7,12 @@
   box-sizing: border-box;
 }
 
-
-html, body {
+html,
+body {
   background-color: #141213;
-    font-family: "Metrophobic", serif;
-    height: 100vh;
-    width: 100%;
+  font-family: 'Metrophobic', serif;
+  height: 100vh;
+  width: 100%;
 }
 
 .container {
@@ -22,69 +22,67 @@ html, body {
   height: 100%;
 }
 
-
 span {
   color: transparent;
-	animation: blur 10s infinite;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+  animation: blur 10s infinite;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 span:nth-child(1) {
-	animation-delay: 0.1s;
+  animation-delay: 0.1s;
 }
 
 span:nth-child(2) {
-	animation-delay: 0.2s;
+  animation-delay: 0.2s;
 }
 
 span:nth-child(3) {
-	animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 
 span:nth-child(4) {
-	animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
 
 span:nth-child(5) {
-	animation-delay: 0.5s;
+  animation-delay: 0.5s;
 }
 
 span:nth-child(6) {
   animation-delay: 0.6s;
 }
 @keyframes blur {
-	0% {
-		text-shadow: 0 0 50px var(--color);
-		opacity: 0;
-	}
+  0% {
+    text-shadow: 0 0 50px var(--color);
+    opacity: 0;
+  }
 
-	5% {
-		text-shadow: 0 0 40px var(--color);
-	}
+  5% {
+    text-shadow: 0 0 40px var(--color);
+  }
 
-	15% {
-		opacity: 1;
-	}
+  15% {
+    opacity: 1;
+  }
 
-	20% {
-		text-shadow: 0 0 0px var(--color);
-	}
+  20% {
+    text-shadow: 0 0 0px var(--color);
+  }
 
-	80% {
-		text-shadow: 0 0 0px var(--color);
-	}
+  80% {
+    text-shadow: 0 0 0px var(--color);
+  }
 
-	85% {
-		opacity: 1;
-	}
+  85% {
+    opacity: 1;
+  }
 
-	95% {
-		text-shadow: 0 0 40px var(--color);
-	}
+  95% {
+    text-shadow: 0 0 40px var(--color);
+  }
 
-	100% {
-		text-shadow: 0 0 50px var(--color);
-		opacity: 0;
-	}
+  100% {
+    text-shadow: 0 0 50px var(--color);
+    opacity: 0;
+  }
 }
-
